# FDDB_scraper

./: ReadMe.md  pyproject.toml
FDDB_scraper/: scrapy.cfg
FDDB_scraper/FDDB_spider/: items.py  middlewares.py  pipelines.py  settings.py
FDDB_scraper/FDDB_spider/spiders/: SearchEngine.py
