[tool.poetry]
name = "fddb_scraper"
version = "0.1.0"
description = ""
authors = ["Pieter Geelen <pieter@geelen.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.1"
ruff = "^0.0.287"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
